# PLaplace_plugin

./: AdvancedGridFunction.h  CMakeLists.txt  JPrime.cpp  JPrime.h  LargeProblemRHS.cpp  LargeProblemRHS.h  NavierStokes.cpp  NavierStokes.h  NavierStokesAdjoint.cpp  NavierStokesAdjoint.h  PLaplaceDerivative.cpp  PLaplaceDerivative.h  PLaplaceDerivativeRHS.cpp  PLaplaceDerivativeRHS.h  VolumeConstraintSecondDerivative.cpp  VolumeConstraintSecondDerivative.h  XBarycenterConstraintSecondDerivative.cpp  XBarycenterConstraintSecondDerivative.h  plaplacian_functions.h  plaplacian_plugin.cpp  restart_functions.h
